--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <img src="classroom.png" alt="Logo Google sala de aula" class="ferramentas-imagem">
                 <h3 class="ferramentas-nome">Classroom</h3>
                 <a href="https://github.com/">
-                    <img src="github (2).png" alt="Logo Git Hub" class="ferramentas-icone">
+                    <img src="github.png" alt="Logo Git Hub" class="ferramentas-icone">
                 </a>
                 <a href="#">
                     <img src="iconemais.png" alt="sinal de mais" class="ferramentas-icone">
@@ -58,7 +58,7 @@
                 <img src="classroom.png" alt="Logo Google sala de aula" class="ferramentas-imagem">
                 <h3 class="ferramentas-nome">Classroom</h3>
                 <a href="https://github.com/">
-                    <img src="github (2).png" alt="Logo Git Hub" class="ferramentas-icone">
+                    <img src="github.png" alt="Logo Git Hub" class="ferramentas-icone">
                 </a>
                 <a href="#">
                     <img src="iconemais.png" alt="sinal de mais" class="ferramentas-icone">
@@ -71,48 +71,7 @@
                 <img src="classroom.png" alt="Logo Google sala de aula" class="ferramentas-imagem">
                 <h3 class="ferramentas-nome">Classroom</h3>
                 <a href="https://github.com/">
-                    <img src="github (2).png" alt="Logo Git Hub" class="ferramentas-icone">
-                </a>
-                <a href="#">
-                    <img src="iconemais.png" alt="sinal de mais" class="ferramentas-icone">
-                </a>
-                <a href="#">
-                    <img src="iconeseta.png" alt="sinal de seta" class="ferramentas-icone">
-                </a>
-            </div>
-            <span></span>
-            <span></span>
-            <div class="ferramentas-div">
-                <img src="classroom.png" alt="Logo Google sala de aula" class="ferramentas-imagem">
-                <h3 class="ferramentas-nome">Classroom</h3>
-                <a href="https://github.com/">
-                    <img src="github (2).png" alt="Logo Git Hub" class="ferramentas-icone">
-                </a>
-                <a href="#">
-                    <img src="iconemais.png" alt="sinal de mais" class="ferramentas-icone">
-                </a>
-                <a href="#">
-                    <img src="iconeseta.png" alt="sinal de seta" class="ferramentas-icone">
-                </a>
-            </div>
-            <div class="ferramentas-div">
-                <img src="classroom.png" alt="Logo Google sala de aula" class="ferramentas-imagem">
-                <h3 class="ferramentas-nome">Classroom</h3>
-                <a href="https://github.com/">
-                    <img src="github (2).png" alt="Logo Git Hub" class="ferramentas-icone">
-                </a>
-                <a href="#">
-                    <img src="iconemais.png" alt="sinal de mais" class="ferramentas-icone">
-                </a>
-                <a href="#">
-                    <img src="iconeseta.png" alt="sinal de seta" class="ferramentas-icone">
-                </a>
-            </div>
-            <div class="ferramentas-div">
-                <img src="classroom.png" alt="Logo Google sala de aula" class="ferramentas-imagem">
-                <h3 class="ferramentas-nome">Classroom</h3>
-                <a href="https://github.com/">
-                    <img src="github (2).png" alt="Logo Git Hub" class="ferramentas-icone">
+                    <img src="github.png" alt="Logo Git Hub" class="ferramentas-icone">
                 </a>
                 <a href="#">
                     <img src="iconemais.png" alt="sinal de mais" class="ferramentas-icone">
@@ -127,7 +86,7 @@
                 <img src="classroom.png" alt="Logo Google sala de aula" class="ferramentas-imagem">
                 <h3 class="ferramentas-nome">Classroom</h3>
                 <a href="https://github.com/">
-                    <img src="github (2).png" alt="Logo Git Hub" class="ferramentas-icone">
+                    <img src="github.png" alt="Logo Git Hub" class="ferramentas-icone">
                 </a>
                 <a href="#">
                     <img src="iconemais.png" alt="sinal de mais" class="ferramentas-icone">
@@ -140,7 +99,7 @@
                 <img src="classroom.png" alt="Logo Google sala de aula" class="ferramentas-imagem">
                 <h3 class="ferramentas-nome">Classroom</h3>
                 <a href="https://github.com/">
-                    <img src="github (2).png" alt="Logo Git Hub" class="ferramentas-icone">
+                    <img src="github.png" alt="Logo Git Hub" class="ferramentas-icone">
                 </a>
                 <a href="#">
                     <img src="iconemais.png" alt="sinal de mais" class="ferramentas-icone">
@@ -153,7 +112,48 @@
                 <img src="classroom.png" alt="Logo Google sala de aula" class="ferramentas-imagem">
                 <h3 class="ferramentas-nome">Classroom</h3>
                 <a href="https://github.com/">
-                    <img src="github (2).png" alt="Logo Git Hub" class="ferramentas-icone">
+                    <img src="github.png" alt="Logo Git Hub" class="ferramentas-icone">
+                </a>
+                <a href="#">
+                    <img src="iconemais.png" alt="sinal de mais" class="ferramentas-icone">
+                </a>
+                <a href="#">
+                    <img src="iconeseta.png" alt="sinal de seta" class="ferramentas-icone">
+                </a>
+            </div>
+            <span></span>
+            <span></span>
+            <div class="ferramentas-div">
+                <img src="classroom.png" alt="Logo Google sala de aula" class="ferramentas-imagem">
+                <h3 class="ferramentas-nome">Classroom</h3>
+                <a href="https://github.com/">
+                    <img src="github.png" alt="Logo Git Hub" class="ferramentas-icone">
+                </a>
+                <a href="#">
+                    <img src="iconemais.png" alt="sinal de mais" class="ferramentas-icone">
+                </a>
+                <a href="#">
+                    <img src="iconeseta.png" alt="sinal de seta" class="ferramentas-icone">
+                </a>
+            </div>
+            <div class="ferramentas-div">
+                <img src="classroom.png" alt="Logo Google sala de aula" class="ferramentas-imagem">
+                <h3 class="ferramentas-nome">Classroom</h3>
+                <a href="https://github.com/">
+                    <img src="github.png" alt="Logo Git Hub" class="ferramentas-icone">
+                </a>
+                <a href="#">
+                    <img src="iconemais.png" alt="sinal de mais" class="ferramentas-icone">
+                </a>
+                <a href="#">
+                    <img src="iconeseta.png" alt="sinal de seta" class="ferramentas-icone">
+                </a>
+            </div>
+            <div class="ferramentas-div">
+                <img src="classroom.png" alt="Logo Google sala de aula" class="ferramentas-imagem">
+                <h3 class="ferramentas-nome">Classroom</h3>
+                <a href="https://github.com/">
+                    <img src="github.png" alt="Logo Git Hub" class="ferramentas-icone">
                 </a>
                 <a href="#">
                     <img src="iconemais.png" alt="sinal de mais" class="ferramentas-icone">
@@ -164,6 +164,10 @@
             </div>
         </div>
     </section>
+    <footer>
+        <img class="rodape-imagem" src="logo.svg" alt="">
+        <p>texto do rodapé <a href="#">aqui</a></p>
+    </footer>
 
 </body>
 
