--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </section>
     <footer>
         <img class="rodape-imagem" src="logo.svg" alt="">
-        <p>Link para o GiHub <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">">aqui</p>
+        <p>Link para o GiHub <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">aqui</p>
     </footer>
 
 </body>
