--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
         </div>
     </section>
     <footer>
-        <img class="rodape-imagem" src="logo.svg" alt="">
-        <p>Link para o GiHub <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">aqui</p>
+        <img class="rodape-imagem" src="logo.svg" alt=""><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+        <p>Link para o github <a href="#">aqui</a></p>
     </footer>
 
 </body>
