--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </div>
     </section>
     <footer>
-        <img class="rodape-imagem" src="logo.svg" alt=""><a href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+        <img class="rodape-imagem" src="logo.svg" alt=""><a href="https://github.com/ProfEverlea/ProjetoFormadoresC" rel="stylesheet">
         <p>Link para o github ></a></p>
     </footer>
 
