--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </section>
     <footer>
         <img class="rodape-imagem" src="logo.svg" alt=""><a href="https://github.com/ProfEverlea/ProjetoFormadoresC" rel="stylesheet">
-        <p>Link para o github ></a></p>
+        <p>Link para o github </a></p>
     </footer>
 
 </body>
