--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
         </div>
     </section>
     <footer>
-<<<<<<< HEAD
+<HEAD></HEAD>
         <img class="rodape-imagem" src="github.png" alt=""><a href="https://github.com/ProfEverlea/ProjetoFormadoresC" rel="stylesheet">
         <p>Link para o github ></a></p>
-=======
+
        
     </footer>
 
