--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
     </section>
     <footer>
 <HEAD></HEAD>
-        <img class="rodape-imagem" src="github.png" alt=""><a href="https://github.com/ProfEverlea/ProjetoFormadoresC" rel="stylesheet">
-        <p>Link para o github ></a></p>
+        <img class="rodape-imagem" src="github.png" alt="" class="ferramentas-icone"><a href="https://github.com/ProfEverlea/ProjetoFormadoresC" rel="stylesheet">
+        <p>Link para o github></a></p>
 
        
     </footer>
