--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </section>
     <footer>
 <HEAD></HEAD>
-        <img class="rodape-imagem" src="github.png" alt="Logo Git Hub" class="ferramentas-icone"><a href="https://github.com/ProfEverlea/ProjetoFormadoresC" rel="stylesheet">
+        <img class="ferramentas-icone" src="github.png" alt="Logo Git Hub" ><a href="https://github.com/ProfEverlea/ProjetoFormadoresC" rel="stylesheet">
         <p>Link para o github></a></p>
 
        
