--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
     </section>
     <footer>
 <HEAD></HEAD>
-        <img class="ferramentas-icone" src="github.png" alt="Logo Git Hub" ><a href="https://github.com/ProfEverlea/ProjetoFormadoresC" rel="stylesheet">
-        <p>Link para o github></a></p>
+        <img class="ferramentas-icone" src="github.png" alt="Logo Git Hub" ><link href="https://github.com/ProfEverlea/ProjetoFormadoresC" rel="stylesheet">
+        <p>Link para o github><a href="#">aqui</a></p>
 
        
     </footer>
