--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <footer>
 <HEAD></HEAD>
         <img class="ferramentas-icone" src="github.png" alt="Logo Git Hub" ><a href="https://github.com/ProfEverlea/ProjetoFormadoresC" rel="stylesheet">
-        <p>Link para o github><a href="#">aqui</a></p>
+        <p>Link para o github></a></p>
 
        
     </footer>
